@@ -20,6 +20,7 @@ Drupal 7.15, xxxx-xx-xx (development version)
 - Fixed bug: Language detection by domain only worked on port 80.
 - Fixed bug which prevented image styles from being deleted on PHP 5.4.
 - Made Ajax alert dialogs respect error reporting settings.
+- Fixed bug which prevented the jQuery UI Datepicker from being localized.
 
 Drupal 7.14 2012-05-02
 ----------------------
